--- a/css/style.css
+++ b/css/style.css
@@ -162,8 +162,6 @@
     color: var(--white-color);
   }
 
-
-
   /*============== General ===============*/
 
   * {
@@ -333,4 +331,37 @@
   vertical-align: middle;
   min-height: 100vh;
   position: relative;
+}
+
+/*============== Classes ===============*/
+
+.class-info {
+  background: var(--white-color);
+  box-shadow: 6px 0 38px rgba(20,20,20,0.10);
+  border-radius: 0 0 2px 2px;
+  padding: 1rem 2rem;
+  position: relative;
+}
+
+.class-info img {
+  border-radius: 2px 2px 0 0;
+}
+
+.class-info strong {
+  color: var(--gray-color);
+}
+
+.class-price {
+  background: var(--primary-color);
+  border-radius: var(--border-radius-large);
+  color: var(--white-color);
+  font-weight: var(--font-weight-bold);
+  display: block;
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  line-height: 3.5rem;
+  text-align: center;
 }
